@@ -16,10 +16,12 @@ Version 1.8.4 patchlevel 9                                 ??? ??, 201?
 Minor changes:
  * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
    "event" restriction is set or cleared. Suggested by [SW]. [MG]
- * Expanded help on lock types. [MG]
+ * Expanded help on lock types and @powers. [MG]
 
 Fixes:
  * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
+ * listq() incorrectly returned all registers (including %0-%9, %i0, etc),
+   not just %q-registers. Reported by Wiggles. [MG]
 
 & 1.8.4p8
 Version 1.8.4 patchlevel 8                                 Nov 11, 2011
