@@ -413,6 +413,10 @@ FUNCTION(fun_listq)
   while (pe_regs) {
     val = pe_regs->vals;
     while (val) {
+      if (!(val->type & PE_REGS_Q)) {
+        val = val->next;
+        continue; /* not a q-register */
+      }
       /* Insert it into the tree if it's non-blank. */
       if ((val->type & PE_REGS_STR) && *(val->val.sval)
           && !st_find(val->name, &blanks)) {
